package com.ptsecurity.appsec.ai.ee.utils.json.report.vulnerability.details;

import com.fasterxml.jackson.annotation.JsonProperty;

public class Parameter {
    @JsonProperty("Name")
    protected String name;
    @JsonProperty("Value")
    protected String value;
    @JsonProperty("Source")
    protected String source;
    @JsonProperty("Payload")
    protected String payload;
    @JsonProperty("Dependency")
    protected String dependency;
    @JsonProperty("Vulnerable")
    protected Boolean vulnerable;
}
