package com.ptsecurity.appsec.ai.ee.utils.json.report.vulnerability;

import com.fasterxml.jackson.annotation.JsonProperty;
import com.ptsecurity.appsec.ai.ee.utils.json.metadata.Metadata;
import com.ptsecurity.appsec.ai.ee.utils.json.metadata.description.Description;
import lombok.Getter;

import java.util.List;

@Getter
public class FingerprintVulnerability extends GenericVulnerability {
    @JsonProperty("ComponentName")
    protected String componentName;
    @JsonProperty("ComponentVersion")
    protected String componentVersion;
    @JsonProperty("FingerprintIds")
    protected List<String> fingerprintIds;

    @Override
    public Description[] getDescription() {
        if (null == description) {
            description = new Description[fingerprintIds.size()];
            for (int i = 0 ; i < this.fingerprintIds.size() ; i++)
                description[i] = Metadata.DESCRIPTIONS.getOrDefault(fingerprintIds.get(i), Description.DEFAULT);
        }
        return description;
    }
}
