package com.ptsecurity.appsec.ai.ee.utils.json.report.vulnerability.details;

import com.fasterxml.jackson.annotation.JsonProperty;

public class BestPlaceToFix {
    @JsonProperty("Type")
    protected String type;
    @JsonProperty("Place")
    protected Place place;
}
