package com.ptsecurity.appsec.ai.ee.utils.json.report.vulnerability.details;

import com.fasterxml.jackson.annotation.JsonProperty;

import java.util.ArrayList;

public class Exploit {
    @JsonProperty("Url")
    protected String url;
    @JsonProperty("Text")
    protected String text;
    @JsonProperty("Type")
    protected String type;

    @JsonProperty("Parameters")
    protected ArrayList<Parameter> parameter;
}
