package com.ptsecurity.appsec.ai.desktop.utils.report.generator.domain;

import com.fasterxml.jackson.annotation.JsonProperty;
import lombok.Getter;
import lombok.Setter;

@Getter @Setter
public class PMVulnerability extends BaseVulnerability {
    @JsonProperty("PatternKey")
    private String patternKey;

    @JsonProperty("MatchedCode")
    private String matchedCode;
    @JsonProperty("BeginLine")
    private int beginLine;
    @JsonProperty("BeginColumn")
    private int beginColumn;
    @JsonProperty("EndLine")
    private int endLine;
    @JsonProperty("EndColumn")
    private int endColumn;
}
