package com.ptsecurity.appsec.ai.desktop.utils.report.generator.domain;

import com.fasterxml.jackson.annotation.JsonProperty;
import lombok.Getter;
import lombok.Setter;

@Getter @Setter
public class ConfVulnerability extends BaseVulnerability {
    @JsonProperty("ExistingValue")
    private String existingValue;
    @JsonProperty("RecommendedValue")
    private String recommendedValue;
}
