@startuml

package PmPatterns {

class PmPattern {
  +String key
  +String pattern
  +String filenameWildcard
  +String programmingLanguages
  +String dataFormat
}

}

package IssueMetadatas {

class IssueMetadata {
  +int cweId
  +String key
  +int issueType
  +int level
}

class IssueMetadata1 {
  +int owaspId
  +String pciId
  +String nist
}
note top of IssueMetadata1
Vulnerability
end note

class IssueMetadata2 {
  +int owaspId
  +String pciId
  +String nist
}
note top of IssueMetadata2
PMVulnerability
end note

class IssueMetadata3 {
  +int owaspId
  +String pciId
  +String nist
}
note top of IssueMetadata3
ConfVulnerability
end note

class IssueMetadata4 {
  +String component
  +String cveId
}
note top of IssueMetadata4
FingerprintVulnerability
end note

class Cvss {
  +String base
  +String baseScore
  +String temp
  +String tempScore
}

IssueMetadata1 --|> IssueMetadata
IssueMetadata2 --|> IssueMetadata
IssueMetadata3 --|> IssueMetadata
IssueMetadata4 --|> IssueMetadata
IssueMetadata4 --> "cvss" Cvss

}

PmPattern --> "key" IssueMetadata2

package IssueDescriptions {

class IssueDescription {
  +String key
  +int issueType
}

IssueDescription --> "descriptions" IssueDescriptionValue

class IssueDescriptionValue {
  +int locale
  +String html
  +String header
  +String description
}

}

IssueDescription --> "key" IssueMetadata

package Issues {

class Ticket {
  +String ticketId
  +String projectId
  +String trackerType
  +String connectionId
}

class BestPlaceToFix {
  +String type
}
class Place {
  +String file
  +String value
  +int endLine
  +int beginLine
  +int endColumn
  +int beginColumn
}
BestPlaceToFix --> "place" Place

class base_Vulnerability {
  +String id
  +String type
  +String class
  +String rvpPvo
  +int counter
  +String groupId
  +String internalId
  +boolean favorite
  +boolean suspected
  +boolean suppressed
  +String scanResultId
  +int approvalState
  +String vulnerableCode
  +String relativeFilePath
  +boolean newInScanResultId
  +boolean oldInScanResultId
}


base_Vulnerability --> "linkedTickets[]" Ticket
base_Vulnerability --> "bestPlaceToFix" BestPlaceToFix
base_Vulnerability --> "vulnerableExpression" Place

class Vulnerability {
  +String afXml
  +String graphId
  +String function
  +int scanMode
  +String stackTrace
  +boolean secondOrder
  +String visualizationInfo
  +String additionalConditions
}

class Exploit {
  +String url
  +String text
  +String type
}
Vulnerability --> "exploit" Exploit
Vulnerability --> "dataTrace[]" Place
Vulnerability --> "entryPoint" Place
Vulnerability --> "autocheckExploit" Exploit
Vulnerability --> "taintDataEntries[]" Place
Vulnerability --> "primordialExploit" Exploit


class Parameter {
  +String name
  +String value
  +String source
  +String payload
  +String dependency
  +boolean vulnerable
}
Exploit --> "parameters[]" Parameter

class PMVulnerability {

}

class ConfVulnerability {
  +String function
  +String existingValue
  +String recommendedValue
}

class FingerprintVulnerability {
  +String componentName
  +String[] fingerprintIds
  +String componentVersion
}

Vulnerability --|> base_Vulnerability
FingerprintVulnerability --|> base_Vulnerability
ConfVulnerability --|> base_Vulnerability
PMVulnerability --|> base_Vulnerability
base_Vulnerability ..> "type == key" IssueMetadata


}

@enduml
